fix(navbar): fix navbar alignment by adding marigin and padding 0 to nav ul

--- a/Official Portfolio/src/Components/Navbar.css
+++ b/Official Portfolio/src/Components/Navbar.css
@@ -7,6 +7,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     background-color: rgb(14, 1, 44);
+    position: sticky;
+    top: 0;
 }
 
 nav .title {
@@ -19,6 +21,8 @@ nav .title {
 
 nav ul {
     display: flex;
+    margin: 0;
+    padding: 0;
 }
 
 nav ul li {
